@@ -40,10 +40,10 @@ int
 main (int argc, char **argv)
 {
     Display	    *dpy = XOpenDisplay (0);
-    twin_x11_t	    *x11 = twin_x11_create (dpy, 512, 512);
-    twin_pixmap_t   *red = twin_pixmap_create (TWIN_ARGB32, 512, 512);
+    twin_x11_t	    *x11 = twin_x11_create (dpy, 1024, 512);
+    twin_pixmap_t   *red = twin_pixmap_create (TWIN_ARGB32, 1024, 512);
     twin_pixmap_t   *blue = twin_pixmap_create (TWIN_ARGB32, 100, 100);
-    twin_pixmap_t   *alpha = twin_pixmap_create (TWIN_A8, 512, 512);
+    twin_pixmap_t   *alpha = twin_pixmap_create (TWIN_A8, 1024, 512);
     twin_operand_t  source, mask;
     twin_path_t	    *path;
     twin_path_t	    *pen;
@@ -56,10 +56,10 @@ main (int argc, char **argv)
     int		    s;
 
     pen = twin_path_create ();
-    twin_path_circle (pen, D (0.5));
+    twin_path_circle (pen, D (1));
     
-    twin_fill (red, 0x00000000, TWIN_SOURCE, 0, 0, 512, 512);
-    twin_fill (alpha, 0x00000000, TWIN_SOURCE, 0, 0, 512, 512);
+    twin_fill (red, 0x00000000, TWIN_SOURCE, 0, 0, 1024, 512);
+    twin_fill (alpha, 0x00000000, TWIN_SOURCE, 0, 0, 1024, 512);
 
     path = twin_path_create ();
 #if 0
@@ -69,7 +69,7 @@ main (int argc, char **argv)
 	int glyph = g;
 	if (!twin_has_glyph (glyph)) glyph = 0;
 	twin_path_cur_point (path, &fx, &fy);
-	if (fx + twin_glyph_width (glyph, D(10)) >= D(512) || g % 50 == 0)
+	if (fx + twin_glyph_width (glyph, D(10)) >= D(1024) || g % 50 == 0)
 	    twin_path_move (path, D(3), fy + D(10));
 	twin_path_glyph (path, D(10), D(10), TWIN_TEXT_ROMAN,
 			 glyph);
@@ -77,36 +77,37 @@ main (int argc, char **argv)
 #endif
 #if 1
     fx = D(3);
-    fy = D(10);
-    for (g = 10; g < 40; g += 2)
+    fy = 0;
+    for (g = 8; g < 30; g += 4)
     {
-#if 1
+#if 0
+        fy += D(g+2);
 	twin_path_move (path, fx, fy);
 	twin_path_string (path, D(g), D(g), TWIN_TEXT_ROMAN,
 			  " !\"#$%&'()*+,-./0123456789:;<=>?");
-        fy += D(g);
+        fy += D(g+2);
 	twin_path_move (path, fx, fy);
 	twin_path_string (path, D(g), D(g), TWIN_TEXT_ROMAN,
 			  "@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_");
-        fy += D(g);
+        fy += D(g+2);
 	twin_path_move (path, fx, fy);
 	twin_path_string (path, D(g), D(g), TWIN_TEXT_ROMAN,
 			  "`abcdefghijklmnopqrstuvwxyz{|}~");
-        fy += D(g);
 #endif
-#if 0
+#if 1
 	for (s = 0; s < 4; s++)
 	{
+	    fy += D(g+2);
+	    twin_path_move (path, fx, fy);
 	    twin_path_string (path, D(g), D(g), styles[s],
 			      "the quick brown fox jumps over the lazy dog.");
 	    twin_path_string (path, D(g), D(g), styles[s], 
 			      "THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG.");
-	    fy += D(g);
 	}
 #endif
 #if 0
-	twin_path_string (path, D(g), D(g), "t");
 	fy += D(g);
+	twin_path_string (path, D(g), D(g), "t");
 #endif
     }
 #endif
@@ -132,10 +133,9 @@ main (int argc, char **argv)
     mask.source_kind = TWIN_PIXMAP;
     mask.u.pixmap = alpha;
     twin_composite (red, 0, 0, &source, 0, 0, &mask, 0, 0, TWIN_OVER,
-		    512, 512);
+		    1024, 512);
 
     twin_fill (blue, 0x00000000, TWIN_SOURCE, 0, 0, 100, 100);
-    twin_fill (alpha, 0x00000000, TWIN_SOURCE, 0, 0, 100, 100);
 
 #if 1
     path = twin_path_create ();
@@ -151,14 +151,36 @@ main (int argc, char **argv)
     twin_path_convolve (path, stroke, pen);
     twin_path_destroy (stroke);
 
+    twin_fill (alpha, 0x00000000, TWIN_SOURCE, 0, 0, 100, 100);
     twin_path_fill (alpha, path);
+    source.source_kind = TWIN_SOLID;
+    source.u.argb = 0xff00ff00;
+    mask.source_kind = TWIN_PIXMAP;
+    mask.u.pixmap = alpha;
+    twin_composite (blue, 0, 0, &source, 0, 0, &mask, 0, 0, TWIN_OVER,
+		    100, 100);
+    
     twin_path_destroy (path);
 
     path = twin_path_create ();
+    stroke = twin_path_create ();
 
-    twin_path_move (path, D (50), D (50));
-    twin_path_curve (path, D (70), D (70), D (80), D (70), D (100), D (50));
+    twin_path_move (stroke, D (50), D (50));
+    twin_path_curve (stroke, D (70), D (70), D (80), D (70), D (100), D (50));
 
+    twin_fill (alpha, 0x00000000, TWIN_SOURCE, 0, 0, 100, 100);
+    twin_path_fill (alpha, stroke);
+    
+    source.source_kind = TWIN_SOLID;
+    source.u.argb = 0xffff0000;
+    mask.source_kind = TWIN_PIXMAP;
+    mask.u.pixmap = alpha;
+    twin_composite (blue, 0, 0, &source, 0, 0, &mask, 0, 0, TWIN_OVER,
+		    100, 100);
+    
+    twin_path_convolve (path, stroke, pen);
+    
+    twin_fill (alpha, 0x00000000, TWIN_SOURCE, 0, 0, 100, 100);
     twin_path_fill (alpha, path);
 
     source.source_kind = TWIN_SOLID;
@@ -172,7 +194,7 @@ main (int argc, char **argv)
     twin_pixmap_move (red, 0, 0);
     twin_pixmap_move (blue, 100, 100);
     twin_pixmap_show (red, x11->screen, 0);
-/*     twin_pixmap_show (blue, x11->screen, 0); */
+     twin_pixmap_show (blue, x11->screen, 0);
     had_motion = TWIN_FALSE;
     for (;;)
     {
